[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
whereexpr = { path = "../whereexpr", features = ["error_description"]}
chrono = "0.4"

[[example]]
name = "bookstore"
path = "bookstore/main.rs"

[[example]]
name = "person"
path = "person/main.rs"

[[example]]
name = "student"
path = "student/main.rs"

[[example]]
name = "folderfilter"
path = "folderfilter/main.rs"

[[example]]
name = "string_search"
path = "string_search/main.rs"

[[example]]
name = "virtual_attributes"
path = "virtual_attributes/main.rs"