[package]
name = "whereexpr"
version = "0.1.3"
edition = "2021"
authors = ["Gavrilut Dragos <gavrilut.dragos@gmail.com>"]
license = "MIT"
description = "A fast, expressive rule-based filtering engine for Rust that evaluates boolean expressions over any data structure"
repository = "https://github.com/gdt050579/whereexpr"
homepage = "https://gdt050579.github.io/whereexpr/"
documentation = "https://docs.rs/whereexpr"
readme = "../README.md"
keywords = ["filtering", "predicate", "rules", "expression", "query"]
categories = ["data-structures", "parser-implementations", "algorithms"]

[lib]
name = "whereexpr"

[dependencies]
aho-corasick = "1.1.4"
fst = "0.4.7"
wax = "0.7.0"
chrono = "0.4.29"

[features]
error_description = []
enable_type_check = []
